@@ -78,6 +78,8 @@
  * 20-Jun-2007 : Removed deprecated code and JCommon dependencies (DG);
  * 27-Jun-2007 : Added getSeriesItemLabelsVisible(int) method, changed
  *               baseItemLabelsVisible from Boolean to boolean (DG);
+ * 23-Oct-2007 : Updated lookup methods to better handle overridden 
+ *               methods (DG);
  * 
  */
 
@@ -624,12 +626,12 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     public Paint lookupSeriesPaint(int series) {
 
         // look up the paint list
-        Paint seriesPaint = this.paintList.getPaint(series);
+        Paint seriesPaint = getSeriesPaint(series);
         if (seriesPaint == null && this.autoPopulateSeriesPaint) {
             DrawingSupplier supplier = getDrawingSupplier();
             if (supplier != null) {
                 seriesPaint = supplier.getNextPaint();
-                this.paintList.setPaint(series, seriesPaint);
+                setSeriesPaint(series, seriesPaint, false);
             }
         }
         if (seriesPaint == null) {
@@ -779,12 +781,12 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     public Paint lookupSeriesFillPaint(int series) {
 
         // look up the paint table
-        Paint seriesFillPaint = this.fillPaintList.getPaint(series);
+        Paint seriesFillPaint = getSeriesFillPaint(series);
         if (seriesFillPaint == null && this.autoPopulateSeriesFillPaint) {
             DrawingSupplier supplier = getDrawingSupplier();
             if (supplier != null) {
                 seriesFillPaint = supplier.getNextFillPaint();
-                this.fillPaintList.setPaint(series, seriesFillPaint);
+                setSeriesFillPaint(series, seriesFillPaint, false);
             }
         }
         if (seriesFillPaint == null) {
@@ -800,6 +802,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series (zero-based index).
      *
      * @return The paint (never <code>null</code>).
+     * 
+     * @see #setSeriesFillPaint(int, Paint)
      */
     public Paint getSeriesFillPaint(int series) {
         return this.fillPaintList.getPaint(series);    
@@ -811,6 +815,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      *
      * @param series  the series index (zero-based).
      * @param paint  the paint (<code>null</code> permitted).
+     * 
+     * @see #getSeriesFillPaint(int)
      */
     public void setSeriesFillPaint(int series, Paint paint) {
         setSeriesFillPaint(series, paint, true);
@@ -823,6 +829,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index (zero-based).
      * @param paint  the paint (<code>null</code> permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getSeriesFillPaint(int)
      */    
     public void setSeriesFillPaint(int series, Paint paint, boolean notify) {
         this.fillPaintList.setPaint(series, paint);
@@ -933,12 +941,12 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     public Paint lookupSeriesOutlinePaint(int series) {
 
         // look up the paint table
-        Paint seriesOutlinePaint = this.outlinePaintList.getPaint(series);
+        Paint seriesOutlinePaint = getSeriesOutlinePaint(series);
         if (seriesOutlinePaint == null && this.autoPopulateSeriesOutlinePaint) {
             DrawingSupplier supplier = getDrawingSupplier();
             if (supplier != null) {
                 seriesOutlinePaint = supplier.getNextOutlinePaint();
-                this.outlinePaintList.setPaint(series, seriesOutlinePaint);
+                setSeriesOutlinePaint(series, seriesOutlinePaint, false);
             }
         }
         if (seriesOutlinePaint == null) {
@@ -954,6 +962,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series (zero-based index).
      *
      * @return The paint (possibly <code>null</code>).
+     * 
+     * @see #setSeriesOutlinePaint(int, Paint)
      */
     public Paint getSeriesOutlinePaint(int series) {
         return this.outlinePaintList.getPaint(series);    
@@ -965,6 +975,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      *
      * @param series  the series index (zero-based).
      * @param paint  the paint (<code>null</code> permitted).
+     * 
+     * @see #getSeriesOutlinePaint(int)
      */
     public void setSeriesOutlinePaint(int series, Paint paint) {
         setSeriesOutlinePaint(series, paint, true);
@@ -977,6 +989,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index (zero-based).
      * @param paint  the paint (<code>null</code> permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getSeriesOutlinePaint(int)
      */    
     public void setSeriesOutlinePaint(int series, Paint paint, boolean notify) {
         this.outlinePaintList.setPaint(series, paint);
@@ -999,6 +1013,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * all registered listeners.
      *
      * @param paint  the paint (<code>null</code> not permitted).
+     * 
+     * @see #getBaseOutlinePaint()
      */
     public void setBaseOutlinePaint(Paint paint) {
         // defer argument checking...
@@ -1011,6 +1027,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * 
      * @param paint  the paint (<code>null</code> not permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getBaseOutlinePaint()
      */
     public void setBaseOutlinePaint(Paint paint, boolean notify) {
         if (paint == null) {
@@ -1081,12 +1099,12 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     public Stroke lookupSeriesStroke(int series) {
 
         // look up the paint table
-        Stroke result = this.strokeList.getStroke(series);
+        Stroke result = getSeriesStroke(series);
         if (result == null && this.autoPopulateSeriesStroke) {
             DrawingSupplier supplier = getDrawingSupplier();
             if (supplier != null) {
                 result = supplier.getNextStroke();
-                this.strokeList.setStroke(series, result);
+                setSeriesStroke(series, result, false);
             }
         }
         if (result == null) {
@@ -1102,6 +1120,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series (zero-based index).
      *
      * @return The stroke (possibly <code>null</code>).
+     * 
+     * @see #setSeriesStroke(int, Stroke)
      */
     public Stroke getSeriesStroke(int series) {
         return this.strokeList.getStroke(series);
@@ -1113,6 +1133,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      *
      * @param series  the series index (zero-based).
      * @param stroke  the stroke (<code>null</code> permitted).
+     * 
+     * @see #getSeriesStroke(int)
      */
     public void setSeriesStroke(int series, Stroke stroke) {
         setSeriesStroke(series, stroke, true);
@@ -1125,6 +1147,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index (zero-based).
      * @param stroke  the stroke (<code>null</code> permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getSeriesStroke(int)
      */
     public void setSeriesStroke(int series, Stroke stroke, boolean notify) {
         this.strokeList.setStroke(series, stroke);
@@ -1137,15 +1161,20 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * Returns the base stroke.
      *
      * @return The base stroke (never <code>null</code>).
+     * 
+     * @see #setBaseStroke(Stroke)
      */
     public Stroke getBaseStroke() {
         return this.baseStroke;
     }
 
     /**
-     * Sets the base stroke.
+     * Sets the base stroke and sends a {@link RendererChangeEvent} to all
+     * registered listeners.
      *
      * @param stroke  the stroke (<code>null</code> not permitted).
+     * 
+     * @see #getBaseStroke()
      */
     public void setBaseStroke(Stroke stroke) {
         // defer argument checking...
@@ -1158,6 +1187,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * 
      * @param stroke  the stroke (<code>null</code> not permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getBaseStroke()
      */
     public void setBaseStroke(Stroke stroke, boolean notify) {
         if (stroke == null) {
@@ -1226,12 +1257,12 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     public Stroke lookupSeriesOutlineStroke(int series) {
 
         // look up the stroke table
-        Stroke result = this.outlineStrokeList.getStroke(series);
+        Stroke result = getSeriesOutlineStroke(series);
         if (result == null && this.autoPopulateSeriesOutlineStroke) {
             DrawingSupplier supplier = getDrawingSupplier();
             if (supplier != null) {
                 result = supplier.getNextOutlineStroke();
-                this.outlineStrokeList.setStroke(series, result);
+                setSeriesOutlineStroke(series, result, false);
             }
         }
         if (result == null) {
@@ -1247,6 +1278,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series (zero-based index).
      *
      * @return The stroke (possibly <code>null</code>).
+     * 
+     * @see #setSeriesOutlineStroke(int, Stroke)
      */
     public Stroke getSeriesOutlineStroke(int series) {
         return this.outlineStrokeList.getStroke(series);
@@ -1258,6 +1291,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      *
      * @param series  the series index (zero-based).
      * @param stroke  the stroke (<code>null</code> permitted).
+     * 
+     * @see #getSeriesOutlineStroke(int)
      */
     public void setSeriesOutlineStroke(int series, Stroke stroke) {
         setSeriesOutlineStroke(series, stroke, true);
@@ -1270,6 +1305,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index.
      * @param stroke  the stroke (<code>null</code> permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getSeriesOutlineStroke(int)
      */
     public void setSeriesOutlineStroke(int series, Stroke stroke, 
                                        boolean notify) {
@@ -1283,6 +1320,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * Returns the base outline stroke.
      *
      * @return The stroke (never <code>null</code>).
+     * 
+     * @see #setBaseOutlineStroke(Stroke)
      */
     public Stroke getBaseOutlineStroke() {
         return this.baseOutlineStroke;
@@ -1293,6 +1332,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * all registered listeners.
      *
      * @param stroke  the stroke (<code>null</code> not permitted).
+     * 
+     * @see #getBaseOutlineStroke()
      */
     public void setBaseOutlineStroke(Stroke stroke) {
         setBaseOutlineStroke(stroke, true);
@@ -1305,6 +1346,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param stroke  the stroke (<code>null</code> not permitted).
      * @param notify  a flag that controls whether or not listeners are 
      *                notified.
+     *                
+     * @see #getBaseOutlineStroke()
      */
     public void setBaseOutlineStroke(Stroke stroke, boolean notify) {
         if (stroke == null) {
@@ -1375,12 +1418,12 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     public Shape lookupSeriesShape(int series) {
 
         // look up the shape list
-        Shape result = this.shapeList.getShape(series);
+        Shape result = getSeriesShape(series);
         if (result == null && this.autoPopulateSeriesShape) {
             DrawingSupplier supplier = getDrawingSupplier();
             if (supplier != null) {
                 result = supplier.getNextShape();
-                this.shapeList.setShape(series, result);
+                setSeriesShape(series, result, false);
             }
         }
         if (result == null) {
@@ -1396,6 +1439,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series (zero-based index).
      *
      * @return The shape (possibly <code>null</code>).
+     * 
+     * @see #setSeriesShape(int, Shape)
      */
     public Shape getSeriesShape(int series) {
         return this.shapeList.getShape(series);
@@ -1407,6 +1452,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      *
      * @param series  the series index (zero-based).
      * @param shape  the shape (<code>null</code> permitted).
+     * 
+     * @see #getSeriesShape(int)
      */
     public void setSeriesShape(int series, Shape shape) {
         setSeriesShape(series, shape, true);
@@ -1419,6 +1466,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index (zero based).
      * @param shape  the shape (<code>null</code> permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getSeriesShape(int)
      */
     public void setSeriesShape(int series, Shape shape, boolean notify) {
         this.shapeList.setShape(series, shape);
@@ -1431,6 +1480,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * Returns the base shape.
      *
      * @return The shape (never <code>null</code>).
+     * 
+     * @see #setBaseShape(Shape)
      */
     public Shape getBaseShape() {
         return this.baseShape;
@@ -1441,6 +1492,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * registered listeners.
      *
      * @param shape  the shape (<code>null</code> not permitted).
+     * 
+     * @see #getBaseShape()
      */
     public void setBaseShape(Shape shape) {
         // defer argument checking...
@@ -1453,6 +1506,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * 
      * @param shape  the shape (<code>null</code> not permitted). 
      * @param notify  notify listeners?
+     * 
+     * @see #getBaseShape()
      */
     public void setBaseShape(Shape shape, boolean notify) {
         if (shape == null) {
@@ -1540,7 +1595,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     }
 
     /**
-     * Sets a flag that controls the visibility of the item labels for a series.
+     * Sets a flag that controls the visibility of the item labels for a series,
+     * and sends a {@link RendererChangeEvent} to all registered listeners.
      * 
      * @param series  the series index (zero-based).
      * @param visible  the flag.
@@ -1550,7 +1606,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     }
     
     /**
-     * Sets the visibility of the item labels for a series.
+     * Sets the visibility of the item labels for a series and sends a 
+     * {@link RendererChangeEvent} to all registered listeners.
      * 
      * @param series  the series index (zero-based).
      * @param visible  the flag (<code>null</code> permitted).
@@ -1577,18 +1634,24 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
     }
 
     /**
-     * Returns the base setting for item label visibility.
+     * Returns the base setting for item label visibility.  A <code>null</code>
+     * result should be interpreted as equivalent to <code>Boolean.FALSE</code>.
      * 
      * @return A flag (possibly <code>null</code>).
+     * 
+     * @see #setBaseItemLabelsVisible(boolean)
      */
     public boolean getBaseItemLabelsVisible() {
         return this.baseItemLabelsVisible;
     }
 
     /**
-     * Sets the base flag that controls whether or not item labels are visible.
+     * Sets the base flag that controls whether or not item labels are visible,
+     * and sends a {@link RendererChangeEvent} to all registered listeners.
      * 
      * @param visible  the flag.
+     * 
+     * @see #getBaseItemLabelsVisible()
      */
     public void setBaseItemLabelsVisible(boolean visible) {
         setBaseItemLabelsVisible(visible, true);
@@ -1600,6 +1663,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * 
      * @param visible  the flag.
      * @param notify  notify listeners?
+     *                
+     * @see #getBaseItemLabelsVisible()
      */
     public void setBaseItemLabelsVisible(boolean visible, boolean notify) {
         this.baseItemLabelsVisible = visible;
@@ -1632,6 +1697,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index (zero-based).
      * 
      * @return The font (possibly <code>null</code>).
+     * 
+     * @see #setSeriesItemLabelFont(int, Font)
      */
     public Font getSeriesItemLabelFont(int series) {
         return (Font) this.itemLabelFontList.get(series);
@@ -1643,6 +1710,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * 
      * @param series  the series index (zero-based).
      * @param font  the font (<code>null</code> permitted).
+     * 
+     * @see #getSeriesItemLabelFont(int)
      */
     public void setSeriesItemLabelFont(int series, Font font) {
         setSeriesItemLabelFont(series, font, true);
@@ -1656,6 +1725,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param font  the font (<code>null</code> permitted).
      * @param notify  a flag that controls whether or not listeners are 
      *                notified.
+     *                
+     * @see #getSeriesItemLabelFont(int)
      */
     public void setSeriesItemLabelFont(int series, Font font, boolean notify) {
         this.itemLabelFontList.set(series, font);
@@ -1669,6 +1740,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * setting is available).
      * 
      * @return The font (<code>never</code> null).
+     * 
+     * @see #setBaseItemLabelFont(Font)
      */
     public Font getBaseItemLabelFont() {
         return this.baseItemLabelFont;
@@ -1679,6 +1752,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * all registered listeners.  
      * 
      * @param font  the font (<code>null</code> not permitted).
+     * 
+     * @see #getBaseItemLabelFont()
      */
     public void setBaseItemLabelFont(Font font) {
         if (font == null) {
@@ -1694,6 +1769,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param font  the font (<code>null</code> not permitted).
      * @param notify  a flag that controls whether or not listeners are 
      *                notified.
+     *                
+     * @see #getBaseItemLabelFont()
      */
     public void setBaseItemLabelFont(Font font, boolean notify) {
         this.baseItemLabelFont = font;
@@ -1726,6 +1803,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index (zero based).
      * 
      * @return The paint (possibly <code>null<code>).
+     * 
+     * @see #setSeriesItemLabelPaint(int, Paint)
      */
     public Paint getSeriesItemLabelPaint(int series) {
         return this.itemLabelPaintList.getPaint(series);
@@ -1737,6 +1816,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * 
      * @param series  the series (zero based index).
      * @param paint  the paint (<code>null</code> permitted).
+     * 
+     * @see #getSeriesItemLabelPaint(int)
      */
     public void setSeriesItemLabelPaint(int series, Paint paint) {
         setSeriesItemLabelPaint(series, paint, true);
@@ -1750,6 +1831,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param paint  the paint (<code>null</code> permitted).
      * @param notify  a flag that controls whether or not listeners are 
      *                notified.
+     *                
+     * @see #getSeriesItemLabelPaint(int)
      */
     public void setSeriesItemLabelPaint(int series, Paint paint, 
                                         boolean notify) {
@@ -1763,6 +1846,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * Returns the base item label paint.
      * 
      * @return The paint (never <code>null<code>).
+     * 
+     * @see #setBaseItemLabelPaint(Paint)
      */
     public Paint getBaseItemLabelPaint() {
         return this.baseItemLabelPaint;
@@ -1773,6 +1858,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * to all registered listeners.
      * 
      * @param paint  the paint (<code>null</code> not permitted).
+     * 
+     * @see #getBaseItemLabelPaint()
      */
     public void setBaseItemLabelPaint(Paint paint) {
         // defer argument checking...
@@ -1786,6 +1873,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param paint  the paint (<code>null</code> not permitted).
      * @param notify  a flag that controls whether or not listeners are 
      *                notified.
+     *                
+     * @see #getBaseItemLabelPaint()
      */
     public void setBaseItemLabelPaint(Paint paint, boolean notify) {
         if (paint == null) {
@@ -2076,6 +2165,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index (zero-based).
      *
      * @return The flag (possibly <code>null</code>).
+     * 
+     * @see #setSeriesCreateEntities(int, Boolean)
      */
     public Boolean getSeriesCreateEntities(int series) {
         return this.createEntitiesList.getBoolean(series);
@@ -2087,6 +2178,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      *
      * @param series  the series index (zero-based).
      * @param create  the flag (<code>null</code> permitted).
+     * 
+     * @see #getSeriesCreateEntities(int)
      */
     public void setSeriesCreateEntities(int series, Boolean create) {
         setSeriesCreateEntities(series, create, true);
@@ -2100,6 +2193,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * @param series  the series index.
      * @param create  the flag (<code>null</code> permitted).
      * @param notify  notify listeners?
+     * 
+     * @see #getSeriesCreateEntities(int)
      */
     public void setSeriesCreateEntities(int series, Boolean create, 
                                         boolean notify) {
@@ -2113,6 +2208,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * Returns the base visibility for all series.
      *
      * @return The base visibility.
+     * 
+     * @see #setBaseCreateEntities(boolean)
      */
     public boolean getBaseCreateEntities() {
         return this.baseCreateEntities;
@@ -2124,6 +2221,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * to all registered listeners.
      *
      * @param create  the flag.
+     * 
+     * @see #getBaseCreateEntities()
      */
     public void setBaseCreateEntities(boolean create) {
         // defer argument checking...
@@ -2137,6 +2236,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * 
      * @param create  the visibility.
      * @param notify  notify listeners?
+     * 
+     * @see #getBaseCreateEntities()
      */
     public void setBaseCreateEntities(boolean create, boolean notify) {
         this.baseCreateEntities = create;
@@ -2274,6 +2375,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * Registers an object to receive notification of changes to the renderer.
      *
      * @param listener  the listener (<code>null</code> not permitted).
+     * 
+     * @see #removeChangeListener(RendererChangeListener)
      */
     public void addChangeListener(RendererChangeListener listener) {
         if (listener == null) {
@@ -2287,6 +2390,8 @@ public abstract class AbstractRenderer implements Cloneable, Serializable {
      * notification of changes to the renderer.
      *
      * @param listener  the object (<code>null</code> not permitted).
+     * 
+     * @see #addChangeListener(RendererChangeListener)
      */
     public void removeChangeListener(RendererChangeListener listener) {
         if (listener == null) {
